# quantum-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: coherence_demo.rs  field_operations.rs
src/: constants.rs  error.rs  lib.rs
src/quantum_field/: mod.rs  tests.rs
src/quantum_field/coherence/: mod.rs  tests.rs
src/quantum_field/consciousness/: mod.rs  tests.rs
src/quantum_field/dimensional/: mod.rs  tests.rs
src/quantum_field/phi_harmonic/: mod.rs  tests.rs
